# python-grpc-demo

./: .gitignore  README.md  pyproject.toml
protos/chat/: message.proto  room.proto  service.proto  user.proto
scripts/: generate.py
src/client/: api.py  client.py  db.py  ui.py
src/proto_gen/chat/: __init__.pyi  message_pb2.py  message_pb2.pyi  message_pb2_grpc.py  room_pb2.py  room_pb2.pyi  room_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
src/server/: db.py  server.py
