[tool.poetry]
name = "python-grpc-demo"
version = "0.1.0"
description = "A simple chat/messaging app demo using gRPC."
authors = ["Chun-Cheng Yu <61136202+Chun-Cheng@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio-tools = "^1.67.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.1"

[tool.ruff.lint]
# default + flake8-annotations(ANN)
select = ["E4", "E7", "E9", "F", "ANN"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
