[project]
name = "python-grpc-demo"
version = "0.1.1"
description = "A simple chat/messaging app demo using gRPC."
authors = [
    {name = "Chun-Cheng Yu", email = "61136202+Chun-Cheng@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "grpcio-tools (>=1.69.0,<2.0.0)",
    "snowflake-id (>=1.0.2,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "mypy (>=1.14.1,<2.0.0)",
    "ruff (>=0.9.1,<0.10.0)",
    "protoletariat (>=3.3.8,<4.0.0)",
    "types-protobuf (>=5.29.1.20241207,<6.0.0.0)"
]

[tool.ruff.lint]
# default + flake8-annotations(ANN)
select = ["E4", "E7", "E9", "F", "ANN"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
